@@ -2,7 +2,6 @@ package com.donny.dendrofinance.data;
 
 import com.donny.dendrofinance.entry.BudgetEntry;
 import com.donny.dendrofinance.entry.TransactionEntry;
-import com.donny.dendrofinance.gui.MainGui;
 import com.donny.dendrofinance.instance.Instance;
 import com.donny.dendrofinance.json.JsonArray;
 import com.donny.dendrofinance.json.JsonFormattingException;
@@ -13,10 +12,40 @@ import com.donny.dendrofinance.types.LDate;
 
 import javax.swing.*;
 import java.io.File;
-import java.util.Base64;
 
 public class ImportHandler {
     private final Instance CURRENT_INSTANCE;
+
+    public static enum ImportMode {
+        /*
+         * IGNORE: if there is a UUID clash, don't add the new one
+         * KEEP: if there is a UUID clash, add the new one with a new UUID
+         * OVERWRITE: if there is a UUID clash, discard the old one and add the new one
+         */
+        IGNORE, KEEP, OVERWRITE;
+
+        public static String[] getArray() {
+            return new String[]{
+                    "IGNORE", "KEEP", "OVERWRITE"
+            };
+        }
+
+        public static ImportMode fromString(String string) {
+            return switch (string.toUpperCase()) {
+                case "IGNORE" -> IGNORE;
+                case "OVERWRITE" -> OVERWRITE;
+                default -> KEEP;
+            };
+        }
+
+        public String toString() {
+            return switch (this) {
+                case IGNORE -> "IGNORE";
+                case KEEP -> "KEEP";
+                case OVERWRITE -> "OVERWRITE";
+            };
+        }
+    }
 
     public ImportHandler(Instance curInst) {
         CURRENT_INSTANCE = curInst;
@@ -26,15 +55,15 @@ public class ImportHandler {
     /*
      * It is expected that JSON imports might be encrypted, but CSVs never will be
      */
-    public final void load(String path, JFrame caller) {
+    public final void load(String path, JFrame caller, ImportMode mode) {
         File file = new File(path);
         if (file.exists()) {
             if (path.toLowerCase().contains(".csv")) {
                 loadCSV(file);
             } else if (path.toLowerCase().contains(".json")) {
-                loadJSON(file);
+                loadJSON(file, mode);
             } else if (path.toLowerCase().contains(".xtbl")) {
-                loadXTBL(file, caller);
+                loadXTBL(file, caller, mode);
             }
         }
     }
@@ -63,13 +92,13 @@ public class ImportHandler {
         CURRENT_INSTANCE.FILE_HANDLER.delete(file);
     }
 
-    public void loadJSON(File file) {
+    public void loadJSON(File file, ImportMode mode) {
         boolean imported = false;
         if (file.getName().toLowerCase().contains("transaction")) {
             try {
                 JsonArray array = (JsonArray) JsonItem.sanitizeDigest(CURRENT_INSTANCE.FILE_HANDLER.read(file));
                 for (JsonObject obj : array.getObjectArray()) {
-                    CURRENT_INSTANCE.DATA_HANDLER.addTransaction(new TransactionEntry(obj, CURRENT_INSTANCE));
+                    CURRENT_INSTANCE.DATA_HANDLER.addTransaction(new TransactionEntry(obj, mode, CURRENT_INSTANCE), mode);
                 }
                 imported = true;
             } catch (JsonFormattingException e) {
@@ -79,7 +108,7 @@ public class ImportHandler {
             try {
                 JsonArray array = (JsonArray) JsonItem.sanitizeDigest(CURRENT_INSTANCE.FILE_HANDLER.read(file));
                 for (JsonObject obj : array.getObjectArray()) {
-                    CURRENT_INSTANCE.DATA_HANDLER.addBudget(new BudgetEntry(obj, CURRENT_INSTANCE));
+                    CURRENT_INSTANCE.DATA_HANDLER.addBudget(new BudgetEntry(obj, mode, CURRENT_INSTANCE), mode);
                 }
                 imported = true;
             } catch (JsonFormattingException e) {
@@ -91,7 +120,7 @@ public class ImportHandler {
         }
     }
 
-    public void loadXTBL(File file, JFrame caller) {
+    public void loadXTBL(File file, JFrame caller, ImportMode mode) {
         boolean imported = false;
         if (file.getName().toLowerCase().contains("transaction")) {
             String raw = CURRENT_INSTANCE.FILE_HANDLER.readDecryptUnknownPassword(file, caller);
@@ -101,7 +130,7 @@ public class ImportHandler {
                 try {
                     JsonArray array = (JsonArray) JsonItem.sanitizeDigest(raw.replace("passwd", ""));
                     for (JsonObject obj : array.getObjectArray()) {
-                        CURRENT_INSTANCE.DATA_HANDLER.addTransaction(new TransactionEntry(obj, CURRENT_INSTANCE));
+                        CURRENT_INSTANCE.DATA_HANDLER.addTransaction(new TransactionEntry(obj, mode, CURRENT_INSTANCE));
                     }
                     imported = true;
                 } catch (JsonFormattingException e) {
@@ -113,7 +142,7 @@ public class ImportHandler {
                 String raw = CURRENT_INSTANCE.FILE_HANDLER.readDecryptUnknownPassword(file, caller);
                 JsonArray array = (JsonArray) JsonItem.sanitizeDigest(raw.replace("passwd", ""));
                 for (JsonObject obj : array.getObjectArray()) {
-                    CURRENT_INSTANCE.DATA_HANDLER.addBudget(new BudgetEntry(obj, CURRENT_INSTANCE));
+                    CURRENT_INSTANCE.DATA_HANDLER.addBudget(new BudgetEntry(obj, mode, CURRENT_INSTANCE));
                 }
                 imported = true;
             } catch (JsonFormattingException e) {
