@@ -1,5 +1,6 @@
 package com.donny.dendrofinance.entry;
 
+import com.donny.dendrofinance.data.ImportHandler;
 import com.donny.dendrofinance.instance.Instance;
 import com.donny.dendrofinance.json.JsonDecimal;
 import com.donny.dendrofinance.json.JsonFormattingException;
@@ -11,19 +12,25 @@ import java.math.BigDecimal;
 public abstract class Entry implements ExportableToJson {
     protected final Instance CURRENT_INSTANCE;
     private final long UUID;
+    public boolean clashing;
 
     public Entry(Instance curInst) {
         UUID = curInst.UUID_HANDLER.generateUUID();
         CURRENT_INSTANCE = curInst;
     }
 
-    public Entry(JsonObject obj, Instance curInst) {
+    public Entry(JsonObject obj, ImportHandler.ImportMode mode, Instance curInst) {
         CURRENT_INSTANCE = curInst;
         if (obj.containsKey("_uuid")) {
             long candidate = obj.getDecimal("_uuid").decimal.longValue();
             if (CURRENT_INSTANCE.UUID_HANDLER.UUIDS.contains(candidate)) {
                 CURRENT_INSTANCE.LOG_HANDLER.warn(getClass(), "Clashing UUID: " + candidate);
-                UUID = CURRENT_INSTANCE.UUID_HANDLER.generateUUID();
+                clashing = true;
+                if (mode == ImportHandler.ImportMode.OVERWRITE) {
+                    UUID = candidate;
+                } else {
+                    UUID = CURRENT_INSTANCE.UUID_HANDLER.generateUUID();
+                }
             } else {
                 UUID = candidate;
                 CURRENT_INSTANCE.UUID_HANDLER.UUIDS.add(UUID);
@@ -35,8 +42,8 @@ public abstract class Entry implements ExportableToJson {
 
     public static Entry get(EntryType type, JsonObject obj, Instance curInst) {
         return switch (type) {
-            case TRANSACTION -> new TransactionEntry(obj, curInst);
-            case BUDGET -> new BudgetEntry(obj, curInst);
+            case TRANSACTION -> new TransactionEntry(obj, ImportHandler.ImportMode.KEEP, curInst);
+            case BUDGET -> new BudgetEntry(obj, ImportHandler.ImportMode.KEEP, curInst);
         };
     }
 
